Reids as a store for the high res data

--- a/Software/Acquisition/CMakeLists.txt
+++ b/Software/Acquisition/CMakeLists.txt
@@ -24,3 +24,4 @@ target_link_libraries (Acquisition protobuf)
 target_link_libraries (Acquisition czmq)
 target_link_libraries (Acquisition zmq)
 target_link_libraries (Acquisition sodium)
+set_target_properties(Acquisition PROPERTIES COMPILE_FLAGS "-DOPQ_DEBUG")
