Fixed a showstoper bug in the frequency computation

--- a/Software/Triggering/CMakeLists.txt
+++ b/Software/Triggering/CMakeLists.txt
@@ -29,4 +29,4 @@ target_link_libraries (Triggering boost_log_setup)
 target_link_libraries (Triggering boost_log)
 target_link_libraries (Triggering boost_system)
 target_link_libraries (Triggering boost_thread)
-set_target_properties(Triggering PROPERTIES COMPILE_FLAGS "-DOPQ_DEBUG")
+#set_target_properties(Triggering PROPERTIES COMPILE_FLAGS "-DOPQ_DEBUG")
